<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre_clinica" />

    <EditText
        android:id="@+id/editText_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >

        
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idn_clinica" />

    <EditText
        android:id="@+id/editText_idnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel_clinica" />

    <Spinner
        android:id="@+id/spinner_niveles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/niveles" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dircc_clinica" />

    <EditText
        android:id="@+id/editText3_dircc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" >
        
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
         >

        <Button
            android:id="@+id/button_guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar" />

        <Button
            android:id="@+id/button_actualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualizar" />

        <Button
            android:id="@+id/button_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elminiar" />

    </LinearLayout>

</LinearLayout>
