<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/background_light"
         >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opciones" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rbutton_admin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_administrador" />

            <RadioButton
                android:id="@+id/rbutton_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_usuario" />
        </RadioGroup>

        <Button
            android:id="@+id/button_acceder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingresar" />
    </LinearLayout>

</RelativeLayout>